Modify client package.json name for client

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "INF3710-client",
+  "name": "client",
   "version": "1.0.0",
   "author": "Nikolay Radoev, adaptÃ© par Charles De Lafontaine",
   "scripts": {
